# echoinput

./: AGENTS.md  Cargo.toml  DESIGN.md  README.md  build.rs  justfile
assets/: logo.README.md
assets/fonts/: info.json
assets/icons/: LICENSE
crates/rdev/: Cargo.toml  LICENSE  README.md
crates/rdev/src/: lib.rs  rdev.rs
crates/rdev/src/linux/: common.rs  mod.rs
crates/rdev/src/linux/wayland/: keyboard.rs  keycodes.rs  listen.rs  mod.rs
crates/rdev/src/linux/x11/: common.rs  keyboard.rs  keycodes.rs  listen.rs  mod.rs
crates/rdev/src/macos/: common.rs  keyboard.rs  keycodes.rs  listen.rs  mod.rs
crates/rdev/src/windows/: common.rs  keyboard.rs  keycodes.rs  listen.rs  mod.rs
src/: app.rs  fonts.rs  hotkey.rs  icons.rs  input.rs  keystrokes.rs  logging.rs  main.rs  settings.rs  tray.rs  ui.rs  window.rs
src/ui/: keystroke.rs  style.rs
