[workspace]
members = [".", "crates/rdev"]

[package]
name = "echoinput"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", default-features = false, features = [
  "tiny-skia",
  "crisp",
  "tokio",
  "x11",
] }
tokio = { version = "1.38", features = ["sync"] }
rdev = { path = "crates/rdev" }
futures-util = "0.3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
global-hotkey = "0.8"
anyhow = "1"
humantime = "2.1"
log = { version = "0.4", features = ["std", "max_level_info"] }
x11rb = "0.13.2"
open = "5"

[build-dependencies]
heck = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
